--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^2.7.4",
     "@prisma/client": "^6.0.1",
+    "@supabase/supabase-js": "^2.47.2",
+    "@types/bcryptjs": "^2.4.6",
+    "bcryptjs": "^2.4.3",
     "date-fns": "^4.1.0",
     "lodash": "^4.17.21",
     "next": "15.0.4",
