--- a/package.json
+++ b/package.json
@@ -3,21 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack -p 9091",
+    "dev": "next dev --turbopack -p 9092",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
-    "@auth/prisma-adapter": "^2.7.4",
-    "@prisma/client": "^6.0.1",
-    "@supabase/supabase-js": "^2.47.2",
-    "@types/bcryptjs": "^2.4.6",
-    "bcryptjs": "^2.4.3",
+    "autoprefixer": "^10.4.20",
     "date-fns": "^4.1.0",
     "lodash": "^4.17.21",
     "next": "15.0.4",
     "next-auth": "^5.0.0-beta.25",
+    "postcss-import": "^16.1.0",
+    "postcss-nesting": "^13.0.1",
+    "postcss-preset-env": "^10.1.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.53.2"
@@ -35,7 +34,6 @@
     "postcss": "^8",
     "prettier": "^3.4.2",
     "prettier-plugin-tailwindcss": "^0.6.9",
-    "prisma": "^6.0.1",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
