--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
     "postcss-nesting": "^13.0.1",
     "postcss-preset-env": "^10.1.1",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-hook-form": "^7.53.2"
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
     "@types/lodash": "^4.17.13",
