--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "postcss-import": "^16.1.0",
     "postcss-nesting": "^13.0.1",
     "postcss-preset-env": "^10.1.1",
+    "quill": "^2.0.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
@@ -25,6 +26,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/quill": "^2.0.14",
     "eslint": "^8",
     "eslint-config-next": "15.0.4",
     "eslint-plugin-prettier": "^5.2.1",
