--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tanstack/eslint-plugin-query": "^5.62.9",
+    "@tanstack/react-query": "^5.62.10",
+    "@tanstack/react-query-devtools": "^5.62.10",
     "autoprefixer": "^10.4.20",
     "date-fns": "^4.1.0",
     "lodash": "^4.17.21",
@@ -24,9 +27,9 @@
   "devDependencies": {
     "@types/lodash": "^4.17.13",
     "@types/node": "^20",
+    "@types/quill": "^2.0.14",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@types/quill": "^2.0.14",
     "eslint": "^8",
     "eslint-config-next": "15.0.4",
     "eslint-plugin-prettier": "^5.2.1",
