--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "@tanstack/eslint-plugin-query": "^5.62.9",
     "@tanstack/react-query": "^5.62.10",
     "@tanstack/react-query-devtools": "^5.62.10",
-    "autoprefixer": "^10.4.20",
     "date-fns": "^4.1.0",
     "lodash": "^4.17.21",
     "next": "15.0.4",
@@ -25,6 +24,7 @@
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.0.0",
     "@types/lodash": "^4.17.13",
     "@types/node": "^20",
     "@types/quill": "^2.0.14",
@@ -37,8 +37,8 @@
     "eslint-plugin-react-hooks": "^5.1.0",
     "postcss": "^8",
     "prettier": "^3.4.2",
-    "prettier-plugin-tailwindcss": "^0.6.9",
-    "tailwindcss": "^3.4.1",
+    "prettier-plugin-tailwindcss": "^0.6.11",
+    "tailwindcss": "^4.0.0",
     "typescript": "^5"
   }
 }
