--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "postcss-preset-env": "^10.1.1",
     "quill": "^2.0.3",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-hook-form": "^7.54.2"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.0.4",
