--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@tanstack/react-query": "^5.62.10",
     "@tanstack/react-query-devtools": "^5.62.10",
     "date-fns": "^4.1.0",
-    "next": "15.0.4",
+    "next": "^15.2.4",
     "next-auth": "^5.0.0-beta.25",
     "postcss-import": "^16.1.0",
     "postcss-nesting": "^13.0.1",
